removing the redundancy in automation of server config+startup in tx bridge tests, JBQA-3924
git-svn-id: https://anonsvn.jboss.org/repos/labs/labs/jbosstm/trunk@36427 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70